# Object-oriented-analysis-and-design-2

./: README.md  pipeline.py
lab01/: .gitignore  README.md
lab01/без_паттерна/Lab11/: MainWindow.xaml  MainWindow.xaml.cs  Models.cs
lab02/: README.md
lab02/без_паттерна/: Main.qml  PlainController.h  PlainModels.h  VaultController.h  VaultItem.h
lab02/с_паттерном/: .gitignore  CMakeLists.txt  Main.qml  VaultController.h  VaultItem.h  main.cpp
lab03/: README.md
lab03/без_паттерна/: app.py  context.py  moex_client.py
lab03/с_паттерном/: __main__.py  handlers.py  moex_client.py  pipeline.py
lab04/: README.md
lab04/без_паттерна/: pom.xml
lab04/без_паттерна/src/main/java/com/example/vault/: CryptoService.java  DirectSecretStore.java  Main.java  SecretEntry.java
lab04/с_паттерном/: .gitignore  README.md  build-native.cmd  pom.xml
lab04/с_паттерном/src/main/java/com/example/vault/: CryptoService.java  DbSecretGateway.java  Main.java  SecretGateway.java
lab3/с_паттерном/: __init__.py  app.py  context.py
